--- a/templates/lista.html
+++ b/templates/lista.html
@@ -1,5 +1,7 @@
 {% extends "template.html" %}
 {% block conteudo %}
+        <a class="btn btn-primary" href="{{ url_for('novo') }}">Novo Jogo</a>
+
         <table class="table table-striped table-responsive table-bordered">
             <thead class="thead-default">
                 <tr>
@@ -15,7 +17,10 @@
                     <td>{{ jogo.nome }}</td>
                     <td>{{ jogo.categoria }}</td>
                     <td>{{ jogo.console }}</td>
-                    <td><a href="{{ url_for('editar', id=jogo.id) }}">Editar</a></td>
+                    <td>
+                        <a href="{{ url_for('editar', id=jogo.id) }}">Editar</a>
+                        <a href="{{ url_for('deletar', id=jogo.id) }}">Deletar</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
