--- a/templates/novo.html
+++ b/templates/novo.html
@@ -1,6 +1,8 @@
 {% extends "template.html" %}
 {% block conteudo %}
-      <form action="{{ url_for('criar') }}" method="post">
+      <form action="{{ url_for('criar') }}" method="post" enctype="multipart/form-data">
+        <input type="file" name="arquivo" accept=".jpg">
+
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome</label>
