--- a/templates/template.html
+++ b/templates/template.html
@@ -24,8 +24,9 @@
               <h1>{{ titulo }}</h1>
           </div>
 
-            {% block conteudo %} {% endblock %}
-
-        </div>
+          {% block conteudo %}{% endblock %}
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='app.js')}}"></script>
+    </div>
     </body>
 </html>
